--- a/app/build.gradle
+++ b/app/build.gradle
@@ -70,4 +70,6 @@ dependencies {
     implementation "androidx.room:room-guava:$room_version"
     // optional - Test helpers
     testImplementation "androidx.room:room-testing:$room_version"
+
+    implementation 'me.hiennguyen.circleseekbar:circleseekbar:1.0.1'
 }
