--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,6 +41,7 @@ dependencies {
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.4.0'
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.0'
+    implementation project(path: ':worldcountrydata')
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
@@ -87,4 +88,15 @@ dependencies {
     //implementation 'com.github.blongho:worldCountryData:1.5.1'
     //implementation 'com.github.jsramraj:flags:1.0'
 
+    implementation "com.spotify.android:auth:1.2.6"
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
+    //implementation project(':spotify-app-remote-release-0.7.2.r')
+    implementation files ('libs/spotify-app-remote-release-0.7.2.aar')
+    implementation files ('libs/country_data')
+    //implementation project(':spotify-app-remote')
+    implementation 'com.spotify.android:auth:1.2.5' // Maven dependency
+
+    // All other dependencies for your app should also be here:
+    implementation 'androidx.browser:browser:1.0.0'
+    implementation project(':worldcountrydata')
 }
